Fix link wrapping

--- a/_includes/styles/default.css
+++ b/_includes/styles/default.css
@@ -67,7 +67,10 @@ main p, main li {
     line-height: 1.75;
 }
 main img {
-    max-width: 100%;
+    max-width: 100%; /* images shouldn't be wider than post container */
+}
+main a {
+    word-break: break-word; /* long links should wrap in multiple lines */
 }
 
 /* Footer */
